Replacement of the html version of my cv by a pdf version

--- a/_site.yml
+++ b/_site.yml
@@ -6,6 +6,11 @@ navbar:
       href: publications.html
     - text: "Experiences"
       href: Experiences.html
+  right:
+    - icon: fa-github
+      href: https://github.com/anthonyrebours
+    - icon: fa-twitter
+      href: https://twitter.com/rebours_anthony
 output: 
   html_document: 
     theme: journal
